--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   <link href="styles.css" rel="stylesheet" type="text/css">
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width,initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content"ie=edge">
@@ -13,7 +14,8 @@
    </header>
    <main>
        <h2>Shantae Saddler</h2>
-       <p>I went to Immaculate Conception High School,currently in my second year at the University of the West Indies. My major is Computer Science. Fun FAct:I love watching series. My favourite series is The Originals.</p>
+       <p>I went to Immaculate Conception High School,currently in my second year at the University of the West Indies. My major is Computer Science. The reason why I chose to do Web Development is becuase I thought it would be fun and exciting to know how to develop my own websites. Plus it would come in hand if one day I choose to start my own online business. </p>
+       <img src="motivation.png" width="550" height="350"/>
    </main>
    <footer>
        <p>Copyright &copy; 2020 Shantae Saddler.</p>
